--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite", 
+    "build": "vite build", 
+    "serve": "vite preview" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "vite": "^5.0.10"
   }
 }
